# Bscratcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mnemonicwordlist.hpp  newmnemonicdialog.cpp  newmnemonicdialog.h  walletwindow.cpp  walletwindow.h
regtest/: config
src/: config.cpp  config.hpp  main.cpp  mnemonicwordlist.cpp  newmnemonicdialog.cpp  newmnemonicdialog.h  newmnemonicdialog.ui  walletwindow.cpp  walletwindow.h  walletwindow.ui
src/storage/: secret_store.cpp  secret_store.hpp
src/wallet/: wallet.cpp  wallet.hpp  words.hpp
src/wallet/words/: en.cpp
